Lambda Manager improvements. (#118)
See PR description for details.