@@ -5,11 +5,20 @@ import static org.graalvm.nativeimage.UnmanagedMemory.malloc;
 import org.graalvm.nativeimage.IsolateThread;
 import org.graalvm.nativeimage.ObjectHandle;
 import org.graalvm.nativeimage.ObjectHandles;
+import org.graalvm.nativeimage.UnmanagedMemory;
+import org.graalvm.nativeimage.Isolates.IsolateException;
+import org.graalvm.nativeimage.Isolates.ProtectionDomain;
 import org.graalvm.nativeimage.c.function.CEntryPoint;
 import org.graalvm.nativeimage.c.function.CEntryPointLiteral;
 import org.graalvm.nativeimage.c.struct.SizeOf;
 import org.graalvm.nativeimage.c.type.CCharPointer;
+import org.graalvm.nativeimage.c.type.CCharPointerPointer;
 import org.graalvm.nativeimage.c.type.CTypeConversion;
+import org.graalvm.word.WordFactory;
+
+import com.oracle.svm.core.c.function.CEntryPointCreateIsolateParameters;
+import com.oracle.svm.core.os.MemoryProtectionProvider;
+import com.oracle.svm.core.os.MemoryProtectionProvider.UnsupportedDomainException;
 import com.oracle.svm.graalvisor.api.AsGraalVisorHost;
 
 public class GraalVisorImpl {
@@ -20,6 +29,7 @@ public class GraalVisorImpl {
                     IsolateThread.class, CCharPointer.class);
 
     private static GraalVisor.GraalVisorStruct graalVisorStructHost;
+    private static CEntryPointCreateIsolateParameters createIsolateParametersStructHost;
 
     public synchronized static GraalVisor.GraalVisorStruct getGraalVisorHostDescriptor() {
         if (graalVisorStructHost.isNull()) {
@@ -28,6 +38,47 @@ public class GraalVisorImpl {
             graalVisorStructHost.setHostReceiveStringFunction(hostReceiveStringFunctionPointer.getFunctionPointer());
         }
         return graalVisorStructHost;
+    }
+
+    public synchronized static CEntryPointCreateIsolateParameters getCreateIsolateParametersHostDescriptor() {
+        System.out.println("Getting isolate parameters!");
+        if (createIsolateParametersStructHost.isNull()) {
+            /* Note that malloc can only be invoked during runtime! */
+            createIsolateParametersStructHost = malloc(SizeOf.get(CEntryPointCreateIsolateParameters.class));
+
+            /* Set null values for aux image options. */
+            createIsolateParametersStructHost.setAuxiliaryImagePath(WordFactory.nullPointer());
+            createIsolateParametersStructHost.setAuxiliaryImageReservedSpaceSize(WordFactory.nullPointer());
+
+            /* Set struct version to 3 to use v3 fields. */
+            createIsolateParametersStructHost.setVersion(3);
+
+            /* Set default protection key. */
+            if (MemoryProtectionProvider.isAvailable()) {
+                try {
+                    int pkey = MemoryProtectionProvider.singleton().asProtectionKey(ProtectionDomain.NO_DOMAIN);
+                    createIsolateParametersStructHost.setProtectionKey(pkey);
+                } catch (UnsupportedDomainException e) {
+                    throw new IsolateException(e.getMessage());
+                }
+            }
+
+            /* Prepare isolate parameters. */
+            String[] args = {"-XX:+PrintGC", "-XX:+VerboseGC", "-XX:+PrintGCSummary", "-XX:+PrintHeapShape", "-XX:MinHeapSize=33554432", "-XX:MaxHeapSize=268435456"};
+            int argc = args.length;
+            createIsolateParametersStructHost.setArgc(argc);
+            createIsolateParametersStructHost.setArgv(WordFactory.nullPointer());
+
+            if (argc > 0) {
+                CCharPointerPointer argv = UnmanagedMemory.malloc(SizeOf.unsigned(CCharPointerPointer.class).multiply(argc));
+                for (int i = 0; i < argc; i++) {
+                    argv.write(i, CTypeConversion.toCString(args[i]).get());
+                }
+                createIsolateParametersStructHost.setArgv(argv);
+                System.out.println("Initializing isolate parameters!");
+            }
+        }
+        return createIsolateParametersStructHost;
     }
 
     @SuppressWarnings("unused")
